<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Space
        android:id="@+id/topspace"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/link_Button"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/topspace"
        app:layout_constraintVertical_bias="0.0">


        <androidx.cardview.widget.CardView
            android:id="@+id/CardFrame"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:backgroundTint="@color/blue_500"
            android:padding="20dp"
            app:cardBackgroundColor="#D9D9D9"
            app:cardCornerRadius="30dp">


            <LinearLayout
                android:id="@+id/LinLayoutFrame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frameLabel"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FramePNLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpPNLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/FramePNText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FrameDDLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpDDLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/FrameDDText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FrameSNLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/SNFrameLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/FrameSNText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scanFrameBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/blue_700"
                    android:foregroundGravity="bottom"
                    android:text="@string/scanBtnLabel"
                    android:textAllCaps="true"
                    app:cornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="@id/CardFrame" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/CmpCard"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:backgroundTint="@color/blue_500"
            android:foregroundGravity="bottom"
            android:padding="20dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:id="@+id/LinLayoutCmp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/labelCmp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/componentLabel"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/CmpTypeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpTypeLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/CmpTypeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/CmpPNLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpPNLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/CmpPNText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/CmpDDLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpDDLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/CmpDDText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/CmpSNLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/cmpSNLabel"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                    <TextView
                        android:id="@+id/CmpSNText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text=""
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/scanCmpBtn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/blue_700"
                    android:foregroundGravity="bottom"
                    android:text="@string/scanBtnLabel"
                    app:cornerRadius="30dp"
                    app:layout_constraintBottom_toBottomOf="@id/CardFrame" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/link_Button"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:drawablePadding="4dp"
        android:drawableTint="#ff0000"
        android:enabled="false"
        android:foregroundGravity="bottom"
        android:text="@string/linkButtonText"
        android:textColor="@color/white"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/bottomSpace"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

    <Space

        android:id="@+id/bottomSpace"
        android:layout_width="0dp"
        android:layout_height="13dp"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>